Themes/default/css/LikePosts.css
.like_posts_overlay {
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	left: 0;
	background: rgba(0,0,0,0.4);
	z-index: 101 !important;
}

.like_posts_member_info_box {
	position: relative;
	width: 50%;
	line-height: 15px;
	font-size: 13px;
	z-index: 102;
	-webkit-border-radius: 5px;
	-webkit-box-shadow: -1px 2px 12px rgba(0, 0, 0, 0.9);
	border: 2px solid #ECEDED;
	color: #fff;
	background: #e0eaf1;
	color: #4a6b82;
	margin: 100px auto 0;
}

.like_posts_member_info {
	padding: 5px 10px;
	border-top: 1px solid rgba(255,255,255,0.5);
	border-bottom: 1px solid rgba(255,255,255,0.5);
	overflow: hidden;
}

.like_posts_member_info img.avatar{
	width: 30px;
	box-shadow: 1px 1px 5px #000;
	float: left;
	position: relative;
}

.like_posts_member_info .like_posts_member_info_details {
	float: left;
	position: relative;
	padding-left: 10px;
}

.like_post_box {
	line-height: 22px;
	position: relative;
}

.like_unlike_link {
	background: #C44E19;
	padding: 1px 5px;
	color: #fff !important;
	position: relative;
}

.subject_details {
	background-color: #e7eaef;
	color: #000;
	display: none;
	position: absolute;
	padding: 10px;
	border: 1px solid #C9C9C9;
	border-radius: 5px;
}

.display_none {
	display: none;
}

/*for firefox*/
.display_inline {
	display: inline !important;
}

.recount_stats {
	position: fixed;
	width: 50%;
	z-index: 102;
	border-radius: 5px;
	box-shadow: -1px 2px 12px rgba(0, 0, 0, 0.9);
	border: 1px solid #111;
	background-color: #292929;
	padding: 1px 3px;
	top: 15%;
	left: 15%;
	line-height: 33px;
	height: 33px;
}

.recount_stats div {
	height: 100%;
	color: #fff;
	text-align: right;
	line-height: 33px;
	width: 0;
	background: url(../images/progress_bar.gif) repeat-x;
	font-size: 20px;
}

.like_posts_notification {
	position: absolute;
	background: #FFF8DC;
	min-width: 35%;
	padding: 0;
	margin: 0;
	z-index: 1000;
}

.like_posts_notification .lp_notification_header {
	position: relative;
	width: 100%;
	height: 36px;
	background: #eee;
	z-index: 1000;
	color: #444;
}

.like_posts_notification .lp_notification_header .lp_notification_tabs {
	width: 50%;
	float: left;
	position: relative;
	padding: 10px 0;
	text-align: center;
	box-shadow: 0px 0px 0px 1px #ddd inset;
}

.like_posts_notification .lp_notification_body {
	box-shadow: 0px 0px 0px 1px #ddd inset;
	position: relative;
	width: 100%;
	overflow-x: hidden;
	overflow-y: scroll;
}

.like_posts_notification .lp_notification_body .single_notify {
	border-bottom: 1px solid #ddd;
	color: #333;
	font-family:'lucida grande', tahoma, verdana, arial, sans-serif;
	padding: 10px;
	overflow: hidden;
}

.like_posts_notification .lp_notification_body .single_notify .avatar {
	width: 30px;
	box-shadow: 1px 1px 5px #000;
	float: left;
	position: relative;
}

.like_posts_notification .lp_notification_body .single_notify .like_post_notify_data {
	float: left;
	position: relative;
	padding-left: 10px;
}

